file handeling in ansible

--- a/myindex.j2
+++ b/myindex.j2
@@ -1,3 +1,4 @@
 <h1>This is my dynamic page</h1>
 <h1> This node is: {{ ansible_os_family }}</h1>
 <h1>this java version is: {{ ubuntujavapack }}</h1>
+<h1>Changing the dynamic file for handlers example</h1>
